--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-grid-layout": "^1.4.4"
+    "react-grid-layout": "^1.4.4",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
