--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@reduxjs/toolkit": "^2.0.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.4",
     "react-hot-toast": "^2.4.1",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-dom": "^18",
     "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.0.1",
