--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-grid-layout": "^1.4.4",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
