--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "clsx": "^2.1.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
