--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "nodemon --experimental-specifier-resolution=node --exec node websocket/serve.mjs"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@reduxjs/toolkit": "^2.0.1",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
@@ -24,10 +28,13 @@
     "react-grid-layout": "^1.4.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-redux": "^9.0.4"
+    "react-redux": "^9.0.4",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
+    "@types/express": "^4.17.21",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -39,6 +46,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
