--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
