--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.3",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.5",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
@@ -44,7 +44,7 @@
     "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
