--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
+    "sirv": "^2.0.4",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3"
   },
