--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.3",
     "next": "^14.1.4",
