--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^8.0.3",
     "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.5",
     "react": "^18.2.0",
